# Parking-Space-Monitoring-System

./: CMakeLists.txt  README.md  calibration.cpp  common.h  debug.cpp  freeSpaceDetection.cpp  main.cpp  pointsStorage.cpp
Interpreter/: Plan and info.md  language design.txt
Notes/: .colorDetection.cpp.swo  basicFunctions.cpp  colorDetection.cpp  prog  readInput.cpp  resizeAndCrop.cpp  shapesAndText.cpp  shapesDetection.cpp  warpPerspective.cpp
Projects/: VirtualPainter.cpp  playground.cpp
Projects/Document-Scanner/: .gitignore  CMakeLists.txt  README.md  main.cpp
Projects/Face-Recognizer/: Makefile
memory_allocation/: GC.md  gc.c  mem_alloc.c  primitive_memory_allocator  primitive_memory_allocator.c
src/: main.cpp
